# NeatString

./: .gitignore  CMakeLists.txt  NeatString.c  nsTest.c
NeatString/: CMakeLists.txt
NeatString/include/: NeatString.h
NeatString/src/: NeatString.c
include/: NeatString.h
